--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.5.1",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "nodemailer": "^6.6.1",
     "path": "^0.12.7",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
